@@ -100,6 +100,8 @@ Other changes:
  - gui: added status_bar::set_orientation(const std::string&)
  - gui: added manager::close_ui_now and made close_ui safer
  - gui: added frame::enable_mouse_click and frame::enable_mouse_move
+ - gui: added font_string::set_vertex_cache_strategy
+ - gui: added frame::set_update_rate
  - gui: renamed gui::uiobject into gui::region, and merged with previous gui::region
  - gui: renamed gui::manager_impl into gui::renderer
  - gui: renamed gui::gl::manager into gui::gl::renderer
